--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.font-aboreto {
+  font-family: 'Aboreto', Arial, Helvetica, sans-serif;
+}
